@@ -14,10 +14,6 @@
 define ('CODE_VERSION', '0.17.0');
 define ('MAX_DICT_KEY', 953);
 
-// The name of hash used to store account password hashes
-// in the database. I think, we are happy with this one forever.
-define ('PASSWORD_HASH', 'sha1');
-
 define ('TAGNAME_REGEXP', '^[[:alnum:]]([\. _~-]?[[:alnum:]])*$');
 define ('AUTOTAGNAME_REGEXP', '^\$[[:alnum:]]([\. _~-]?[[:alnum:]])*$');
 // The latter matches both SunOS and Linux-styled formats.
