@@ -456,7 +456,7 @@ function createUser ()
 	assertStringArg ('realname', __FUNCTION__, TRUE);
 	assertStringArg ('password', __FUNCTION__);
 	$username = $_REQUEST['username'];
-	$password = hash (PASSWORD_HASH, $_REQUEST['password']);
+	$password = sha1 ($_REQUEST['password']);
 	$result = commitCreateUserAccount ($username, $_REQUEST['realname'], $password);
 	if ($result == TRUE)
 		return buildRedirectURL (__FUNCTION__, 'OK', array ($username));
@@ -477,7 +477,7 @@ function updateUser ()
 		return buildRedirectURL (__FUNCTION__, 'ERR1');
 	// Update user password only if provided password is not the same as current password hash.
 	if ($new_password != $old_hash)
-		$new_password = hash (PASSWORD_HASH, $new_password);
+		$new_password = sha1 ($new_password);
 	$result = commitUpdateUserAccount ($_REQUEST['user_id'], $username, $_REQUEST['realname'], $new_password);
 	if ($result == TRUE)
 		return buildRedirectURL (__FUNCTION__, 'OK', array ($username));
@@ -1382,11 +1382,11 @@ function changeMyPassword ()
 	assertStringArg ('oldpassword', __FUNCTION__);
 	assertStringArg ('newpassword1', __FUNCTION__);
 	assertStringArg ('newpassword2', __FUNCTION__);
-	if ($accounts[$remote_username]['user_password_hash'] != hash (PASSWORD_HASH, $_REQUEST['oldpassword']))
+	if ($accounts[$remote_username]['user_password_hash'] != sha1 ($_REQUEST['oldpassword']))
 		return buildRedirectURL (__FUNCTION__, 'ERR2');
 	if ($_REQUEST['newpassword1'] != $_REQUEST['newpassword2'])
 		return buildRedirectURL (__FUNCTION__, 'ERR3');
-	if (commitUpdateUserAccount ($accounts[$remote_username]['user_id'], $accounts[$remote_username]['user_name'], $accounts[$remote_username]['user_realname'], hash (PASSWORD_HASH, $_REQUEST['newpassword1'])))
+	if (commitUpdateUserAccount ($accounts[$remote_username]['user_id'], $accounts[$remote_username]['user_name'], $accounts[$remote_username]['user_realname'], sha1 ($_REQUEST['newpassword1'])))
 		return buildRedirectURL (__FUNCTION__, 'OK');
 	else
 		return buildRedirectURL (__FUNCTION__, 'ERR4');
