@@ -23,6 +23,7 @@
 	update: switchvlans gateway has been changed
 	update: RackTables installation is now done only through install.php
 	update: records for F5 hardware
+	update: don't require HASH extension any more
 	bugfix: show error message if snmp module isn't loaded.  closes ticket 43 (by Aaron)
 	bugfix: show error message for duplicate IPv4 network record
 	bugfix: it was possible to access the system as any existing
